--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 1.0.0
 
 Package: pkgcheck
 Architecture: all
-Depends: debhelper (>= 5), diffutils, ${misc:Depends}, ${launcher:Depends}, ${shlibs:Depends}
+Depends: dpkg,  diffutils, ${misc:Depends}, ${launcher:Depends}, ${shlibs:Depends}
 Description: fast and easy way to be sure that your package does not miss some files
 
 
