--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pkgcheck
 Section: libs
 Priority: optional
 Maintainer: Miroslav Safr <miroslav.safr@gmail.com>
-Build-Depends: debhelper (>= 5)
+Build-Depends: debhelper (>= 5), xsltproc, docbook-xsl
 Suggest: appver
 Standards-Version: 1.0.0
 
