--- a/debian/rules
+++ b/debian/rules
@@ -4,3 +4,9 @@ export DH_VERBOSE=1
 
 %:
 	dh  $@
+
+override_dh_auto_build:
+	DEBVERSION=$(dpkg-parsechangelog | sed -n -e 's/^Version: //p' &>/dev/null)
+	cd doc && ./update_docs.sh $DEBVERSION && cd -
+	dh_auto_build
+
