New: jss-docs-update for unified documentation updates Int: lintian warnings removal Int: copyright format update Int: updated debian source format from 1.0 to 3.0 (native) to enable shared bz2 tarballs
Signed-off-by: Miroslav Safr <Miroslav.Safr@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,15 @@
 Source: pkgcheck
-Section: libs
+Section: utils
 Priority: optional
 Maintainer: Miroslav Safr <miroslav.safr@gmail.com>
-Build-Depends: debhelper (>= 5), xsltproc, docbook-xsl
-Suggest: appver
-Standards-Version: 1.0.0
+Build-Depends: debhelper (>= 5), appver, jenkins-support-scripts (>=1.2.3)
+Standards-Version: 3.8.1
+Homepage: http://safrm.net/projects/pkgcheck
 
 Package: pkgcheck
 Architecture: all
-Depends: dpkg,  diffutils, ${misc:Depends}, ${launcher:Depends}, ${shlibs:Depends}
-Description: fast and easy way to be sure that your package does not miss some files
+Depends: diffutils, ${misc:Depends}, ${launcher:Depends}, ${shlibs:Depends}
+Description: fast and easy way to be sure that your package does not miss \
+	some files
 
 
